--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+/*
+
+// https://fonts.googleapis.com/css2?family=Inter
+font-family: 'Inter', sans-serif;
+
+*/
+
 * {
   box-sizing: border-box;
   line-height: 1;
@@ -8,4 +17,5 @@
   padding: 0;
   min-width: 0;
   min-height: 0;
+  font-family: 'Inter', sans-serif;
 }
