--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -19,3 +19,8 @@ font-family: 'Inter', sans-serif;
   min-height: 0;
   font-family: 'Inter', sans-serif;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
