--- a/src/components/ui/shared/button/main.module.scss
+++ b/src/components/ui/shared/button/main.module.scss
@@ -5,15 +5,12 @@
   outline: none;
   padding: 4px 8px;
   border-radius: 5px;
+  user-select: none;
   transition: .2s ease;
   cursor: pointer;
 
   &.hidden {
     display: none;
-  }
-
-  &:hover {
-    background: #ddd;
   }
 
   &_default {
@@ -23,19 +20,11 @@
   &_primary {
     background: #222;
     color: white;
-
-    &:hover {
-      background: #111;
-    }
   }
 
   &_white {
     background: white;
     color: #222;
     box-shadow: 0 0 20px 0;
-
-    &:hover {
-      background: #eee;
-    }
   }
 }
