--- a/src/app/styles/page.module.scss
+++ b/src/app/styles/page.module.scss
@@ -1,7 +1,7 @@
 .container {
   min-height: 100vh;
   text-align: center;
-  padding: 20% 0 20px;
+  padding: 24vh 0 20px;
 
   .title {
     font-size: 2em;
@@ -9,11 +9,11 @@
   }
 
   .description {
-    margin-top: 5%;
+    margin-top: 1vh;
   }
 
   section.counter {
-    margin-top: 5%;
+    margin-top: 3vh;
 
     p.count {
       font-size: 2em;
