--- a/src/shared/ui/button/main.module.scss
+++ b/src/shared/ui/button/main.module.scss
@@ -27,4 +27,12 @@
     color: #222;
     box-shadow: 0 0 20px 0;
   }
+
+  &.fill {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
