--- a/src/shared/ui/input/main.module.scss
+++ b/src/shared/ui/input/main.module.scss
@@ -1,4 +1,4 @@
-.btn {
+.input {
   background: #eee;
   color: #222;
   border: none;
@@ -26,5 +26,13 @@
     background: white;
     color: #222;
     box-shadow: 0 0 20px 0;
+  }
+
+  &.fill {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
   }
 }
